--- a/web/css/default.css
+++ b/web/css/default.css
@@ -116,7 +116,7 @@ body {
   z-index: 1;
 }
 
-.tab-bottom-unselected {
+.tab-connector-unselected {
     position: absolute;
     width: 100%;
     height: 2px;
