--- a/web/css/default.css
+++ b/web/css/default.css
@@ -30,8 +30,9 @@ a:hover {
 
 body {
     font-family: "Bitter", "Lucida Console";
+    font-size: 16px;
     letter-spacing: 1px;
-    line-height: 150%;
+    line-height: 180%;
     background-image: url(../img/circuit-board.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -42,7 +43,6 @@ body {
 .container {
     width: 85%;  
     margin: auto;
-    font-size: 15px;
     min-width: 750px;
 }
 
@@ -72,6 +72,7 @@ body {
 }
 
 .title-desc {
+    font-size: 20px;
     margin-left: 85px;
     text-align: center;
 }
@@ -89,7 +90,7 @@ body {
     width: 10%;
     min-width: 60px; 
     color: #bd1143;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
     text-align: center;
     border-top-right-radius: 20px;
@@ -136,7 +137,13 @@ body {
     margin-top: 5px;
     margin-right: 30px;
     margin-bottom: 20px;
-    opacity: 1;
+}
+
+.raspberrypidiagram-img {
+    float: right;
+    margin-left: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .content {
@@ -160,6 +167,7 @@ body {
     height: 18px;
     margin-top: 5px;
     padding: 5px;
+    padding-bottom: 15px;
     color: white;
     text-align: center;
     border-radius: 20px;
