--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -53,7 +53,7 @@ body {
     padding: 30px;
     width: 500px;
     border: 5px solid white;
-    border-radius: 25px;
+    border-radius: 10px;
     background-color: black;
     background-color: rgba(0, 0, 0, 0.8);
     margin-bottom: 20px;
@@ -79,23 +79,20 @@ body {
 }
 
 .nav {
-    padding-left: 20px;
 }
 
 .tab {
     float: left;
     position: relative;
     padding: 10px;
-    margin-left: 2px;
-    margin-right: 2px;
-    width: 10%;
-    min-width: 60px; 
+    width: 14.2857%;
+    min-width: 98px; 
     color: #76a928;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     background: -webkit-linear-gradient(rgba(127, 127, 127, 0.8), rgba(0, 0, 0, 0.8));
     background: -o-linear-gradient(rgba(127, 127, 127, 0.8), rgba(0, 0, 0, 0.8));
     background: -moz-linear-gradient(rgba(127, 127, 127, 0.8), rgba(0, 0, 0, 0.8));
@@ -129,13 +126,23 @@ body {
     z-index: 2;
 }
 
+.tab-divider {
+    position: absolute;
+    width: 2px;
+    height: 88%;
+    bottom: 0;
+    right: -1.25px;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 3;
+}
+
 .newLine {
     clear: both;
 }
 
 .raspberrypi-img {
     float: left;
-    margin-top: 5px;
     margin-right: 30px;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -153,7 +160,8 @@ body {
     padding: 10px;
     padding-left: 35px;
     padding-right: 35px;
-    border-radius: 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     background-color: black;
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -166,18 +174,27 @@ body {
     padding-left: 20px;
 }
 
+.raspi-popup {
+}
+
+.table-striped > tbody > tr:nth-of-type(2n+1) {
+    background-color: rgba(74, 74, 74, 0.8);
+}
+
 .theme-chooser {
     color: white;
     font-size: 12px;
 }
 
+select {
+    color: black;
+}
+
 .footer {
     text-align: center;
-    height: 18px;
     margin-top: 5px;
     padding: 5px;
-    padding-bottom: 15px;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: rgb(127, 127, 127);
     background-color: rgba(127, 127, 127, 0.8);
 }
