--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -153,12 +153,22 @@ body {
     padding-left: 20px;
 }
 
+.table-striped > tbody > tr:nth-of-type(2n+1) {
+    background-color: rgba(230, 230, 230, 0.8);
+}
+
+.theme-chooser {
+    color: black;
+    font-size: 12px;
+}
+
+.raspi-popup {
+}
+
 .footer {
     text-align: center;
-    height: 18px;
     margin-top: 5px;
     padding: 5px;
-    padding-bottom: 15px;
 }
 
 .footer-text {
