--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -106,7 +106,8 @@ body {
     background: linear-gradient(rgba(118, 169, 40, 0.8), rgba(0, 0, 0, 0.8));
 }
 
-.tab-link {
+.tab-link,
+.tab-dropdown-item-link {
   position: absolute; 
   width: 100%;
   height: 100%;
@@ -135,6 +136,34 @@ body {
     background-color: white;
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 3;
+}
+
+.tab-dropdown-menu {
+    position: absolute;
+    display: none;
+    width: 100%;
+    top: 48px;
+    left: 0.5px;
+}
+
+.tab-with-dropdown:hover .tab-dropdown-menu,
+.tab-dropdown-menu:hover .tab-dropdown-menu {
+    display: block;
+}
+
+.tab-dropdown-item {
+    position: relative;
+    background: rgba(48, 48, 48, 0.9);
+    margin: 3px;
+    border: thin solid rgba(255, 255, 255, 0.8);
+    border-radius: 5px;
+}
+
+.tab-dropdown-item:hover {
+    background: -webkit-linear-gradient(rgba(118, 169, 40, 0.9), rgba(48, 48, 48, 0.9));
+    background: -o-linear-gradient(rgba(118, 169, 40, 0.9), rgba(48, 48, 48, 0.9));
+    background: -moz-linear-gradient(rgba(118, 169, 40, 0.9), rgba(48, 48, 48, 0.9));
+    background: linear-gradient(rgba(118, 169, 40, 0.9), rgba(48, 48, 48, 0.9));
 }
 
 .newLine {
