--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -90,7 +90,8 @@ body {
     background: linear-gradient(white, rgba(255, 255, 255, 0.8));
 }
 
-.tab-link {
+.tab-link,
+.tab-dropdown-item-link {
   position: absolute; 
   width: 100%;
   height: 100%;
@@ -117,6 +118,37 @@ body {
     right: 0;
     background-color: gray;
     z-index: 3;
+}
+
+.tab-dropdown-menu {
+    background-color: #d6d6d6;
+    position: absolute;
+    display: none;
+    width: 99%;
+    left: 0.5px;
+    top: 47px;
+    z-index: 5;
+}
+
+.tab-with-dropdown:hover .tab-dropdown-menu,
+.tab-dropdown-menu:hover .tab-dropdown-menu {
+    display: block;
+}
+
+.tab-dropdown-item {
+    position: relative;
+    border-left: thin solid gray;
+    border-bottom: thin solid gray;
+    border-right: thin solid gray;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.tab-dropdown-item:hover {
+    background: -webkit-linear-gradient(white, rgba(255, 255, 255, 0.8));
+    background: -o-linear-gradient(white, rgba(255, 255, 255, 0.8));
+    background: -moz-linear-gradient(white, rgba(255, 255, 255, 0.8));
+    background: linear-gradient(white, rgba(255, 255, 255, 0.8));
 }
 
 .newLine {
