Updated labs page, added bjc.com link, cleaned up jsp on search page, styled popup backgrounds, lab 6 submission

--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -204,6 +204,8 @@ body {
 }
 
 .raspi-popup {
+    background-color: rgba(0, 0, 0, 0.8);
+    border: none;
 }
 
 .table-striped > tbody > tr:nth-of-type(2n+1) {
