--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -13,6 +13,20 @@
  Light Green:   98a97f
 */
 
+#pacman-canvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+}
+
+#pacman-exit-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 3;
+}
+
 a {
     -webkit-text-stroke: 0.25px black;
 }
@@ -62,6 +76,11 @@ body {
 .title-img {
     float: left;
     margin-right: 5px;
+}
+
+.title-img img {
+    position: absolute;
+    z-index: 1;
 }
 
 .title {
@@ -124,7 +143,7 @@ body {
     left: 0;
     background-color: white;
     background-color: rgba(255, 255, 255, 0.8);
-    z-index: 2;
+    z-index: 1;
 }
 
 .tab-divider {
@@ -135,7 +154,7 @@ body {
     right: -1.25px;
     background-color: white;
     background-color: rgba(255, 255, 255, 0.8);
-    z-index: 3;
+    z-index: 1;
 }
 
 .tab-dropdown-menu {
