--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -13,6 +13,20 @@
  Light Green:   98a97f
 */
 
+#pacman-canvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+}
+
+#pacman-exit-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 3;
+}
+
 body {
     font-family: "Bitter", "Lucida Console";
     font-size: 16px;
@@ -44,8 +58,10 @@ body {
 }
 
 .title-img img {
+    position: absolute;
     height: 50px;
     width: 39px;
+    z-index: 1;
 }
 
 .title {
@@ -92,12 +108,12 @@ body {
 
 .tab-link,
 .tab-dropdown-item-link {
-  position: absolute; 
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .tab-connector-unselected {
@@ -107,7 +123,7 @@ body {
     bottom: 0;
     left: 0;
     background-color: gray;
-    z-index: 2;
+    z-index: 1;
 }
 
 .tab-divider {
@@ -117,7 +133,7 @@ body {
     top: 0;
     right: 0;
     background-color: gray;
-    z-index: 3;
+    z-index: 1;
 }
 
 .tab-dropdown-menu {
@@ -127,7 +143,7 @@ body {
     width: 99%;
     left: 0.5px;
     top: 47px;
-    z-index: 5;
+    z-index: 1;
 }
 
 .tab-with-dropdown:hover .tab-dropdown-menu,
