--- a/web/css/default.css
+++ b/web/css/default.css
@@ -61,6 +61,31 @@ body {
     min-width: 750px;
 }
 
+.header {
+    position: relative;
+}
+
+.signin-container {
+    display: table;
+    color: black;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 200px;
+    height: 100px;
+    padding: 10px;
+    border: 5px solid black;
+    border-radius: 10px;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.signin-content {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
 .title-container {
     color: black;
     font-size: 19px;
