--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -42,6 +42,28 @@ body {
     min-width: 750px;
 }
 
+.header {
+    position: relative;
+}
+
+.signin-container {
+    display: table;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 200px;
+    height: 70px;
+    padding: 10px;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.signin-content {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
 .title-container {
     height: 70px;
     width: 400px;
