Updated the position and look of the close buttons on the popups

--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -250,6 +250,13 @@ body {
 .raspi-popup {
     background-color: rgba(0, 0, 0, 0.8);
     border: none;
+    position: relative;
+}
+
+.raspi-popup .close-btn {
+    position: absolute;
+    top: -10px;
+    right: -10px;
 }
 
 .table-striped > tbody > tr:nth-of-type(2n+1) {
