--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -233,6 +233,13 @@ body {
 }
 
 .raspi-popup {
+    position: relative;
+}
+
+.raspi-popup .close-btn {
+    position: absolute;
+    top: -10px;
+    right: -10px;
 }
 
 .footer {
