--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -51,8 +51,6 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 200px;
-    height: 70px;
     padding: 10px;
     background-color: white;
     background-color: rgba(255, 255, 255, 0.8);
@@ -65,7 +63,7 @@ body {
 }
 
 .title-container {
-    height: 70px;
+    height: 100px;
     width: 400px;
     color: black;
     font-size: 19px;
@@ -75,8 +73,8 @@ body {
 
 .title-img {
     float: left;
-    padding-top: 10px;
-    padding-left: 15px;
+    padding-top: 25px;
+    padding-left: 25px;
 }
 
 .title-img img {
@@ -87,11 +85,11 @@ body {
 }
 
 .title {
-    float:left;
     font-weight: bold;
     font-size: 40px;
-    padding-top: 20px;
+    padding-top: 35px;
     padding-left: 45px;
+    text-align: center;
 }
 
 .title-desc {
