Added sign in functionality, Added dynamic sign in/welcome population depending on user's sign in status, Added a sign out page that invalidates the user's current session, Added styling for hide/show functionality

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -84,6 +84,28 @@ body {
     vertical-align: middle;
 }
 
+.signin-content-visible {
+    display: table-cell;
+}
+
+.signin-content-invisible {
+    display: none;
+}
+
+.welcome-content {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.welcome-content-visible {
+    display: table-cell;
+}
+
+.welcome-content-invisible {
+    display: none;
+}
+
 .title-container {
     color: black;
     font-size: 19px;
