--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -84,6 +84,29 @@ body {
     vertical-align: middle;
 }
 
+.signin-content-visible {
+    display: table-cell;
+}
+
+.signin-content-invisible {
+    display: none;
+}
+
+.welcome-content {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.welcome-content-visible {
+    display: table-cell;
+}
+
+.welcome-content-invisible {
+    display: none;
+}
+
+
 .title-container {
     color: white;
     font-size: 19px;
