Added a members only page and link from nav bar, Added sign in validation to members only page, Added a deny page that a user is directed to if trying to access an unauthorized page, Changed sign in to redirect to index page, Finished requirements for Lab 08

--- a/web/css/inversion.css
+++ b/web/css/inversion.css
@@ -150,7 +150,7 @@ body {
     float: left;
     position: relative;
     padding: 10px;
-    width: 14.2857%;
+    width: 12.5%; //14.2857%;
     min-width: 98px; 
     color: #76a928;
     font-size: 18px;
