--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -132,7 +132,7 @@ body {
     margin-right: 0px;
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 14.2857%;
+    width: 12.5%; //14.2857%;
     min-width: 60px; 
     color: #bd1143;
     font-size: 18px;
