--- a/web/css/default.css
+++ b/web/css/default.css
@@ -149,7 +149,7 @@ body {
     float: left;
     position: relative;
     padding: 10px;
-    width: 14.2857%;
+    width: 12.5%; //14.2857%;
     min-width: 98px; 
     color: #bd1143;
     font-size: 18px;
@@ -172,12 +172,12 @@ body {
 
 .tab-link,
 .tab-dropdown-item-link {
-  position: absolute; 
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .tab-connector-unselected {
